--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
     </ul>
   </div>
   <div class="page-list">
-    <h2>Goals</h2>
+    <h2>2015 Goals</h2>
     <ul>
       {% for goal in site.goals %}
       <li>  
