--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <figcaption class="hero-img__caption"><a href="http://technodrome1.tumblr.com/" target="_blank">Technodrome</a></figcaption>
   </figure>
 </section>
-<section class="section section--with-padding">
+<section class="section content">
   <div class="content-group">
     <h2 class="content-group__title">Work</h2>
     <p class="content-group__copy">A few of my favorite projects (full-time and freelance) </p>
@@ -20,7 +20,7 @@ layout: default
     </ul>
   </div>
   <div class="content-group">
-    <h2 class="content-group__title">Goals</h2>
+    <h2 class="content-group__title"><a href="/goals">Goals</a></h2>
     <p class="content-group__copy">In 2015 I had a few goals and tried to record them as frequently as possible and I'm doing the same thing in 2016</p>
     <ul class="content-group__list list-unstyled">
       {% for goal in site.goals %}
@@ -35,7 +35,7 @@ layout: default
     </ul>
   </div>
   <div class="content-group">
-    <h2 class="content-group__title">Writing</h2>
+    <h2 class="content-group__title"><a href="/writing">Writing</a></h2>
     <p class="content-group__copy">And sometimes I write about work, life, cookies or just whatever I find intersting.</p>
     <ul class="content-group__list list-unstyled">
       {% for post in site.posts %}
